# simple-path-tracer

./: .gitignore  Cargo.toml  README.md
scenes/: common_materials.json  common_primitives.json  common_textures.json  pt.json  test_scene_00.json  test_scene_01.json  test_scene_02.json  test_scene_03.json  test_scene_04.json  test_scene_05.json  test_scene_06.json  test_scene_07.json  test_scene_08.json  test_scene_09.json  test_scene_10.json  test_scene_11.json  test_scene_12.json  test_scene_13.json  test_scene_14.json  test_scene_15.json  test_scene_16.json  test_scene_17.json  test_scene_18.json  test_scene_19.json  test_scene_20.json  test_scene_21.json  test_scene_22.json  test_scene_23.json
scenes/models/: boundary.ply  cube.ply  cube_crease.ply  letter-p.ply
src/: main.rs
src/bxdf/: fresnel.rs  lambert.rs  microfacet.rs  microfacet_conductor.rs  microfacet_dielectric.rs  microfacet_plastic.rs  mod.rs  pseudo.rs  specular_conductor.rs  specular_dielectric.rs  specular_plastic.rs  substrate.rs  util.rs
src/camera/: mod.rs  perspective.rs
src/core/: alias_table.rs  bbox.rs  camera.rs  color.rs  coord.rs  film.rs  filter.rs  intersection.rs  light.rs  loader.rs  material.rs  medium.rs  mod.rs  path_tracer.rs  primitive.rs  ray.rs  renderer.rs  rng.rs  sampler.rs  scatter.rs  scene.rs  scene_resources.rs  surface.rs  texture.rs  transform.rs
src/filter/: boxf.rs  mod.rs
src/light/: directional.rs  environment.rs  mod.rs  point.rs  rect.rs  shape_light.rs  spot.rs
src/light_sampler/: mod.rs  power_is.rs  uniform.rs
src/loader/: gltf.rs  json.rs  mod.rs
(+67 files in other folders)
