[package]
name = "simple-path-tracer"
version = "0.1.0"
authors = ["PepcyCh <pepsich86@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
rand = "0.8"
image = "0.23"
serde_json = "1.0"
tobj = "2.0"