[package]
name = "simple-path-tracer"
version = "0.1.0"
authors = ["PepcyCh <pepsich86@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
rand = { version = "0.8", features = ["small_rng"] }
crossbeam = "0.8"
image = "0.23"
exr = "1.1"
serde_json = "1.0"
num_cpus = "1.13"
indicatif = "0.16"
lazy_static = "1.4"
tobj = "3.2"

[features]
bezier_ni = []
